<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2_"
    android:textAlignment="center"
    tools:context=".page3">

    <TextView
        android:id="@+id/text_bmi"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/bg__1_"
        android:backgroundTint="#719E3D"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:text="@string/fat"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/text_bmi2"
        android:layout_width="142dp"
        android:layout_height="35dp"
        android:background="@drawable/bg__1_"
        android:backgroundTint="#719E3D"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:text="@string/btxt4"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/text_ideal"
        android:layout_width="206dp"
        android:layout_height="35dp"
        android:background="@drawable/bg__1_"
        android:backgroundTint="#719E3D"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:text="@string/btxt5"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <ImageView
        android:id="@+id/page2_image1"
        android:layout_width="379dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        app:srcCompat="@drawable/shape" />

    <TextView
        android:id="@+id/text_bmiComment"
        android:layout_width="344dp"
        android:layout_height="32dp"
        android:fontFamily="@font/delius_swash_caps"
        android:text="@string/btxt6"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="245dp"
        android:layout_height="34dp"
        android:fontFamily="@font/delius_swash_caps"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:textColor="@color/colortextview"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

    <EditText
        android:id="@+id/textclass3_2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:backgroundTint="#0C0C0C"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi33"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <EditText
        android:id="@+id/textclass4_2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:backgroundTint="#070707"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi44"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <EditText
        android:id="@+id/textclass6_2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:backgroundTint="#0E0E0E"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi66"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <EditText
        android:id="@+id/textclass8_2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:backgroundTint="#0B0B0B"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi88"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

    <EditText
        android:id="@+id/textclass7_2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:backgroundTint="#040303"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi77"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <EditText
        android:id="@+id/textclass5_2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:backgroundTint="#0E0E0E"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi55"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <EditText
        android:id="@+id/textclass2_2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:backgroundTint="#0B0A0A"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi22"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

    <EditText
        android:id="@+id/textclass1_2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:backgroundTint="#0C0C0C"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi11"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <EditText
        android:id="@+id/textclass1_1"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <EditText
        android:id="@+id/textclass2_1"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

    <EditText
        android:id="@+id/textclass3_1"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <EditText
        android:id="@+id/textclass7_1"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <EditText
        android:id="@+id/textclass8_1"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi8"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textclass6_1"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi6"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <EditText
        android:id="@+id/textclass5_1"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <EditText
        android:id="@+id/textclass4_1"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:inputType="textPersonName"
        android:text="@string/bmi4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="23dp"
        android:layout_height="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631"
        app:srcCompat="@android:drawable/alert_dark_frame" />

    <EditText
        android:id="@+id/val_bmi"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/delius_swash_caps"
        android:inputType="textPersonName"
        android:text="@string/bmivalue"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/val_ideal"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/delius_swash_caps"
        android:inputType="textPersonName"
        android:text="@string/bmiideal"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/val_ideal3"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/delius_swash_caps"
        android:inputType="textPersonName"
        android:text="@string/fatval"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <Button
        android:id="@+id/tips_bmi"
        android:layout_width="166dp"
        android:layout_height="26dp"
        android:background="#3cb371"
        android:fontFamily="@font/aclonica"
        android:text="@string/bmiTips"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

</androidx.constraintlayout.widget.ConstraintLayout>