<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="190dp"
    android:layout_gravity="center"
    android:background="@color/projectText"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:background="@color/projectBtns"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/Perioddelete"
        android:textAlignment="center"
        android:textColor="@color/prjctBtnTextclr"
        android:textSize="30sp" />

    <Button
        android:id="@+id/cnfrmdlt"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/projectText"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/PeriodDeleteYes"
        android:textAlignment="center"
        android:textColor="@color/PopUp"
        android:textSize="36sp" />

    <Button
        android:id="@+id/cnclDelete"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:background="@color/prjctBtnTextclr"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/PeriodDeleteNo"
        android:textColor="@color/projectBtns"
        android:textSize="36sp" />

</LinearLayout>